k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-apps
  labels:
    name: ingress
