k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: secure-apps
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
      protocol: TCP
