k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-python-app
  namespace: secure-apps
spec:
  podSelector:
    matchLabels:
      app: python-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress
      podSelector:
        matchLabels:
          app: ingress-pod
    ports:
    - protocol: TCP
      port: 5000
